agent/lib/include/agentxx/ffi_api.h

#define AGENTXX_FFI_API_VERSION 1
/* ==================== 错误码 ==================== */

#define AGENTXX_FFI_OK            0  ///< 成功
#define AGENTXX_FFI_ERR_INVALID   -1 ///< 参数非法 (NULL 句柄/空串/非法 JSON 等)
#define AGENTXX_FFI_ERR_STATE     -2 ///< 状态错误 (未 start/已 stop 后调用、io 线程内 stop 等)
#define AGENTXX_FFI_ERR_JSON      -3  ///< JSON 解析失败
#define AGENTXX_FFI_ERR_CONFIG    -4  ///< 配置非法 (模型缺失/字段类型错误)
#define AGENTXX_FFI_ERR_INIT      -5  ///< agent init 失败 (详见 log/EVT_ERROR)
#define AGENTXX_FFI_ERR_INTERRUPT -6  ///< 中断请求无效 (id 不存在/已应答/已过期)
#define AGENTXX_FFI_ERR_TIMEOUT   -7  ///< 同步查询等待响应超时
#define AGENTXX_FFI_ERR_OOM       -8  ///< 内存分配失败
#define AGENTXX_FFI_ERR_INTERNAL  -99 ///< 内部异常 (log 含详细信息)
/* ==================== 基础字符串结构体 ==================== */

/// 只读字符串视图: 指向调用方内存 (UTF-8), 不要求 NUL 结尾
typedef struct AgentxxStringView {
    const char* data; ///< 指向 UTF-8 字节序列
    uint64_t    size; ///< 字节数

#ifdef __cplusplus
    AgentxxStringView() :
        data(nullptr),
        size(0) {}

    AgentxxStringView(const char* d, uint64_t n) :
        data(d),
        size(n) {}

    operator const AgentxxStringView*() const {
        return this;
    }

    bool empty() const {
        return data == nullptr || size == 0;
    }
#endif
} AgentxxStringView;
/// 跨 CRT 堆分配字符串 (具有显式所有权: 由宿主库分配, 调用方接管并负责释放)
typedef struct AgentxxString {
    char*    data; ///< 指向堆分配的 UTF-8 字节序列 (以 \0 结尾; 空时为 NULL)
    uint64_t size; ///< 字节数 (不含结尾 \0)

#ifdef __cplusplus
    AgentxxString() :
        data(nullptr),
        size(0) {}

    AgentxxString(char* d, uint64_t n) :
        data(d),
        size(n) {}

    operator const AgentxxString*() const {
        return this;
    }

    bool empty() const {
        return data == nullptr || size == 0;
    }
#endif
} AgentxxString;
/* ==================== 句柄 ==================== */

/// agent 会话运行时句柄 (不透明; 由 agentxx_ffi_create 创建, agentxx_ffi_destroy 销毁)
typedef struct AgentxxFFIAgent AgentxxFFIAgent;
/* ==================== 内存管理 ==================== */

/// 跨 CRT 堆分配原始字节
AGENTXX_FFI_EXPORT void* AGENTXX_FFI_CALL agentxx_ffi_malloc(uint64_t size);
/// 分配并拷贝字符串视图为 AgentxxString
AGENTXX_FFI_EXPORT int32_t AGENTXX_FFI_CALL
    agentxx_ffi_strdup_n(const AgentxxStringView* s, AgentxxString* out);
/* ==================== 事件回调 ==================== */

/// agent 事件种类
typedef enum AgentxxFFIEventType {
    AGENTXX_FFI_EVT_READY = 0,     ///< 服务端就绪, 可开始发送输入: {"sessionId"}
    AGENTXX_FFI_EVT_SYNC,          ///< 全量/部分历史同步: wire sync JSON
    AGENTXX_FFI_EVT_DELTA,         ///< 流式增量: wire delta JSON (kind=text_token/...)
    AGENTXX_FFI_EVT_TURN_END,      ///< 轮次结束: wire turn_result JSON
    AGENTXX_FFI_EVT_CONTEXT_STATS, ///< 上下文统计: wire context_stats JSON
    AGENTXX_FFI_EVT_MODEL_INFO,    ///< 模型信息 (查询/切换结果): wire model_info JSON
    AGENTXX_FFI_EVT_COMPONENTS, ///< 启动组件 (MCP/Skill/Memory/插件): wire append_component_info
                                ///< JSON
    AGENTXX_FFI_EVT_INTERRUPT_REQ,     ///< HIL 中断询问 (权限确认/输入收集)
    AGENTXX_FFI_EVT_INTERRUPT_EXPIRED, ///< 中断已过期/已取消: {"interruptId"}
    AGENTXX_FFI_EVT_PLUGIN_DATA,       ///< 插件事件转发: wire plugin_data JSON
    AGENTXX_FFI_EVT_ERROR,             ///< 内部错误: {"code","message"}
} AgentxxFFIEventType;
typedef struct AgentxxFFICallbacks {
    /// 事件回调 (client io 线程; payload_json 仅回调期间有效)
    void(AGENTXX_FFI_CALL*
             on_event)(int32_t type, const AgentxxStringView* payload_json, void* user_data);
    /// 宿主上下文 (原样透传给 on_event)
    void* user_data;
} AgentxxFFICallbacks;
/// 异步启动 (创建 io 线程 + init + 会话驱动循环):
/// - 立即返回 AGENTXX_FFI_OK 表示已受理; 就绪后回调 EVT_READY
AGENTXX_FFI_EXPORT int32_t AGENTXX_FFI_CALL
    agentxx_ffi_start(AgentxxFFIAgent* a, AgentxxString* log);
/// 同步停止并回收 (阻塞到 io 线程退出; 幂等; 不得在回调线程内调用)
AGENTXX_FFI_EXPORT int32_t AGENTXX_FFI_CALL
    agentxx_ffi_stop(AgentxxFFIAgent* a, AgentxxString* log);
/* ==================== 会话交互 (异步, 投递 io 线程执行) ==================== */

/// 发送用户输入 (EVT_READY 前发送会缓存, 就绪后按序处理)
AGENTXX_FFI_EXPORT int32_t AGENTXX_FFI_CALL
    agentxx_ffi_send_input(AgentxxFFIAgent* a, const AgentxxStringView* text, AgentxxString* log);
/// 切换当前会话所用模型 (结果经 EVT_MODEL_INFO 通知)
AGENTXX_FFI_EXPORT int32_t AGENTXX_FFI_CALL agentxx_ffi_select_model(
    AgentxxFFIAgent*         a,
    const AgentxxStringView* model_name,
    AgentxxString*           log
);
/// 记住权限选择 (服务端注册路径规则, 后续同路径不再询问):
/// op: 0=读取 1=写入; allow: 1=允许 0=拒绝
AGENTXX_FFI_EXPORT int32_t AGENTXX_FFI_CALL agentxx_ffi_set_permission(
    AgentxxFFIAgent*         a,
    const AgentxxStringView* path,
    int32_t                  allow,
    int32_t                  op,
    AgentxxString*           log
);
/// 切换当前连接会话 (sessionId 为空 = 关闭持久化时非法):
AGENTXX_FFI_EXPORT int32_t AGENTXX_FFI_CALL agentxx_ffi_switch_session(
    AgentxxFFIAgent*         a,
    const AgentxxStringView* sessionId,
    AgentxxString*           log
);
/// 持久化会话列表: {"sessions":[{"sessionId","title","lastActiveMs"},...]}
AGENTXX_FFI_EXPORT int32_t AGENTXX_FFI_CALL
    agentxx_ffi_list_sessions(AgentxxFFIAgent* a, AgentxxString* out, AgentxxString* log);
/* ==================== HIL 中断应答 ==================== */

/// 提交 EVT_INTERRUPT_REQ 的应答 (values_json 经 JSON 数组表示)
AGENTXX_FFI_EXPORT int32_t AGENTXX_FFI_CALL agentxx_ffi_interrupt_respond(
    AgentxxFFIAgent*         a,
    int64_t                  interrupt_id,
    const AgentxxStringView* values_json,
    AgentxxString*           log
);
/* ==================== 日志 ==================== */

/// 取走运行期间积压的日志条目 (JSON 数组 [{"level","message"},...]; 取走后清空;
/// agentxx_ffi_string_free 释放)
AGENTXX_FFI_EXPORT int32_t AGENTXX_FFI_CALL
    agentxx_ffi_drain_logs(AgentxxFFIAgent* a, AgentxxString* out, AgentxxString* log);
/* ==================== 异步安全事件队列 ==================== */

/// 事件队列句柄 (不透明)
typedef struct AgentxxFFIEventQueue AgentxxFFIEventQueue;