agent/ffi/dart/lib/agentxx_ffi_bindings.dart


  late final _agentxx_interrupt_respondPtr = _lookup<
          ffi.NativeFunction<
              ffi.Int Function(ffi.Pointer<AgentxxFFIAgent>, ffi.Int64,
                  ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Pointer<ffi.Char>>)>>(
      'agentxx_ffi_interrupt_respond');
  late final _agentxx_interrupt_respond =
      _agentxx_interrupt_respondPtr.asFunction<
          int Function(ffi.Pointer<AgentxxFFIAgent>, int, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  /// 持久化会话列表: {"sessions":[{"sessionId","title","lastActiveMs"},...]}
  ffi.Pointer<ffi.Char> agentxx_ffi_list_sessions(
    ffi.Pointer<AgentxxFFIAgent> a,
    ffi.Pointer<ffi.Pointer<ffi.Char>> log,
  ) {
    return _agentxx_list_sessions(
      a,
      log,
    );
  }

  late final _agentxx_list_sessionsPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<ffi.Char> Function(ffi.Pointer<AgentxxFFIAgent>,
                  ffi.Pointer<ffi.Pointer<ffi.Char>>)>>(
      'agentxx_ffi_list_sessions');
  late final _agentxx_list_sessions = _agentxx_list_sessionsPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<AgentxxFFIAgent>, ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  ffi.Pointer<ffi.Void> agentxx_ffi_malloc(
    int size,
  ) {
    return _agentxx_malloc(
      size,
    );
  }

  late final _agentxx_mallocPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Void> Function(ffi.Size)>>(
          'agentxx_ffi_malloc');
  late final _agentxx_malloc =
      _agentxx_mallocPtr.asFunction<ffi.Pointer<ffi.Void> Function(int)>();

  /// 切换当前会话所用模型 (结果经 EVT_MODEL_INFO 通知)
  int agentxx_ffi_select_model(
    ffi.Pointer<AgentxxFFIAgent> a,
    ffi.Pointer<ffi.Char> model_name,
    ffi.Pointer<ffi.Pointer<ffi.Char>> log,
  ) {
    return _agentxx_select_model(
      a,
      model_name,
      log,
    );
  }

  late final _agentxx_select_modelPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<AgentxxFFIAgent>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>)>>('agentxx_ffi_select_model');
  late final _agentxx_select_model = _agentxx_select_modelPtr.asFunction<
      int Function(ffi.Pointer<AgentxxFFIAgent>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  /// 发送用户输入 (EVT_READY 前发送会缓存, 就绪后按序处理)
  int agentxx_ffi_send_input(
    ffi.Pointer<AgentxxFFIAgent> a,
    ffi.Pointer<ffi.Char> text,
    ffi.Pointer<ffi.Pointer<ffi.Char>> log,
  ) {
    return _agentxx_send_input(
      a,
      text,
      log,
    );
  }

  late final _agentxx_send_inputPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<AgentxxFFIAgent>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>)>>('agentxx_ffi_send_input');
  late final _agentxx_send_input = _agentxx_send_inputPtr.asFunction<
      int Function(ffi.Pointer<AgentxxFFIAgent>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  /// 记住权限选择 (服务端注册路径规则, 后续同路径不再询问):
  /// op: 0=读取 1=写入; allow: 1=允许 0=拒绝
  int agentxx_ffi_set_permission(
    ffi.Pointer<AgentxxFFIAgent> a,
    ffi.Pointer<ffi.Char> path,
    int allow,
    int op,
    ffi.Pointer<ffi.Pointer<ffi.Char>> log,
  ) {
    return _agentxx_set_permission(
      a,
      path,
      allow,
      op,
      log,
    );
  }

  late final _agentxx_set_permissionPtr = _lookup<
          ffi.NativeFunction<
              ffi.Int Function(
                  ffi.Pointer<AgentxxFFIAgent>,
                  ffi.Pointer<ffi.Char>,
                  ffi.Int,
                  ffi.Int,
                  ffi.Pointer<ffi.Pointer<ffi.Char>>)>>(
      'agentxx_ffi_set_permission');
  late final _agentxx_set_permission = _agentxx_set_permissionPtr.asFunction<
      int Function(ffi.Pointer<AgentxxFFIAgent>, ffi.Pointer<ffi.Char>, int,
          int, ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  /// 异步启动 (创建 agent io 线程 + init + 会话驱动循环):
  /// - 立即返回 AGENTXX_FFI_OK 表示已受理; 就绪后回调 EVT_READY
  /// - 启动失败经 EVT_ERROR 上报 (可经 agentxx_ffi_drain_logs 取详情)
  int agentxx_ffi_start(
    ffi.Pointer<AgentxxFFIAgent> a,
    ffi.Pointer<ffi.Pointer<ffi.Char>> log,
  ) {
    return _agentxx_start(
      a,
      log,
    );
  }

  late final _agentxx_startPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<AgentxxFFIAgent>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>)>>('agentxx_ffi_start');
  late final _agentxx_start = _agentxx_startPtr.asFunction<
      int Function(
          ffi.Pointer<AgentxxFFIAgent>, ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  /// 同步停止并回收 (阻塞到 agent io 线程退出; 幂等; 不得在回调线程内调用)
  int agentxx_ffi_stop(
    ffi.Pointer<AgentxxFFIAgent> a,
    ffi.Pointer<ffi.Pointer<ffi.Char>> log,
  ) {
    return _agentxx_stop(
      a,
      log,
    );
  }

  late final _agentxx_stopPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<AgentxxFFIAgent>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>)>>('agentxx_ffi_stop');
  late final _agentxx_stop = _agentxx_stopPtr.asFunction<
      int Function(
          ffi.Pointer<AgentxxFFIAgent>, ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  /// 分配并拷贝 NUL 结尾字符串 (字符串返回值的统一分配通道)
  ffi.Pointer<ffi.Char> agentxx_ffi_strdup_n(
    ffi.Pointer<ffi.Char> s,
    int size,
  ) {
    return _agentxx_strdup_n(
      s,
      size,
    );
  }

  late final _agentxx_strdup_nPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Char>, ffi.Size)>>('agentxx_ffi_strdup_n');
  late final _agentxx_strdup_n = _agentxx_strdup_nPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Char>, int)>();

  /// 切换当前连接会话 (sessionId 为空 = 关闭持久化时非法):
  /// 重新绑定会话并回推 Sync/ModelInfo/ContextStats (经对应事件通知)
  int agentxx_ffi_switch_session(
    ffi.Pointer<AgentxxFFIAgent> a,
    ffi.Pointer<ffi.Char> sessionId,
    ffi.Pointer<ffi.Pointer<ffi.Char>> log,
  ) {
    return _agentxx_switch_session(
      a,
      sessionId,
      log,
    );
  }

  late final _agentxx_switch_sessionPtr = _lookup<
          ffi.NativeFunction<
              ffi.Int Function(ffi.Pointer<AgentxxFFIAgent>,
                  ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Pointer<ffi.Char>>)>>(
      'agentxx_ffi_switch_session');
  late final _agentxx_switch_session = _agentxx_switch_sessionPtr.asFunction<
      int Function(ffi.Pointer<AgentxxFFIAgent>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Pointer<ffi.Char>>)>();
}

const int AGENTXX_FFI_ERR_CONFIG = -4;

const int AGENTXX_FFI_ERR_INIT = -5;

const int AGENTXX_FFI_ERR_INTERNAL = -99;

const int AGENTXX_FFI_ERR_INTERRUPT = -6;

const int AGENTXX_FFI_ERR_INVALID = -1;

const int AGENTXX_FFI_ERR_JSON = -3;

const int AGENTXX_FFI_ERR_OOM = -8;

const int AGENTXX_FFI_ERR_STATE = -2;

const int AGENTXX_FFI_ERR_TIMEOUT = -7;

const int AGENTXX_FFI_API_VERSION = 1;

const int AGENTXX_FFI_OK = 0;

final class AgentxxFFIAgent extends ffi.Opaque {}

/// EVT_INTERRUPT_REQ payload:
/// {"interruptId": N, "sessionId": "...", "node": "...", "value": "...",
/// "argJson": {"name": "...", "inputs": [
/// {"label": "...", "depict": "...", "type": "bool|int|double|string|enum",
/// "defaultValue": "...", "enumValues": [...]}, ...]}}
/// 宿主应 UI 展示后调用 agentxx_ffi_interrupt_respond() 应答:
/// values_json 为 JSON 数组, 与 inputs 顺序一一对应:
/// bool → "true"/"false"; int/double → 数字字符串; enum → 枚举值字符串;
/// string → 文本; type 为空 → 无需输入 (应答空数组即可)
final class AgentxxFFICallbacks extends ffi.Struct {
  /// 事件回调 (agent io 线程; payload_json 为 NUL 结尾 UTF-8, 仅回调期间有效)
  external ffi.Pointer<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.UnsignedInt type,
              ffi.Pointer<ffi.Char> payload_json,
              ffi.Pointer<ffi.Void> user_data)>> on_event;

  /// 宿主上下文 (原样透传给 on_event)
  external ffi.Pointer<ffi.Void> user_data;
}

final class AgentxxFFIEventQueue extends ffi.Opaque {}

/// agent 事件种类
enum AgentxxFFIEventType {
  /// < 服务端就绪, 可开始发送输入: {"sessionId"}
  AGENTXX_FFI_EVT_READY(0),

  /// < 全量/部分历史同步: wire sync JSON
  AGENTXX_FFI_EVT_SYNC(1),

  /// < 流式增量: wire delta JSON (kind=text_token/...)
  AGENTXX_FFI_EVT_DELTA(2),

  /// < 轮次结束: wire turn_result JSON
  AGENTXX_FFI_EVT_TURN_END(3),

  /// < 上下文统计: wire context_stats JSON
  AGENTXX_FFI_EVT_CONTEXT_STATS(4),

  /// < 模型信息 (查询/切换结果): wire model_info JSON
  AGENTXX_FFI_EVT_MODEL_INFO(5),

  /// < 启动组件 (MCP/Skill/Memory/插件): wire append_component_info JSON
  AGENTXX_FFI_EVT_COMPONENTS(6),

  /// < HIL 中断询问 (权限确认/输入收集): 见注释
  AGENTXX_FFI_EVT_INTERRUPT_REQ(7),

  /// < 中断已过期/已取消: {"interruptId"}
  AGENTXX_FFI_EVT_INTERRUPT_EXPIRED(8),

  /// < 插件事件转发: wire plugin_data JSON
  AGENTXX_FFI_EVT_PLUGIN_DATA(9),

  /// < 内部错误: {"code","message"}
  AGENTXX_FFI_EVT_ERROR(10);

  final int value;
  const AgentxxFFIEventType(this.value);

  static AgentxxFFIEventType fromValue(int value) => switch (value) {
        0 => AGENTXX_FFI_EVT_READY,
        1 => AGENTXX_FFI_EVT_SYNC,
        2 => AGENTXX_FFI_EVT_DELTA,
        3 => AGENTXX_FFI_EVT_TURN_END,
        4 => AGENTXX_FFI_EVT_CONTEXT_STATS,
        5 => AGENTXX_FFI_EVT_MODEL_INFO,
        6 => AGENTXX_FFI_EVT_COMPONENTS,
        7 => AGENTXX_FFI_EVT_INTERRUPT_REQ,
        8 => AGENTXX_FFI_EVT_INTERRUPT_EXPIRED,
        9 => AGENTXX_FFI_EVT_PLUGIN_DATA,
        10 => AGENTXX_FFI_EVT_ERROR,
        _ =>
          throw ArgumentError('Unknown value for AgentxxFFIEventType: $value'),
      };
}
